# Climate-REF4CMIP

./: .bumpversion.toml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  README.md  alembic.ini  conftest.py  docker-compose.override.yaml  docker-compose.yaml  mkdocs.yml  mypy_plugin.py  pyproject.toml  ruff.toml  towncrier.toml
.github/: release_template.md
.github/ISSUE_TEMPLATE/: bug.md
.github/actions/build-container/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci-integration.yaml  ci.yaml  containers.yaml  deploy.yaml  install-pypi.yaml  release.yaml
changelog/: 1.feature.md  100.breaking.md  101.improvement.md  102.trivial.md  103.improvement.md  104.breaking.md  104.feature.md  108.feature.md  11.feature.md  113.feature.md  115.feature.md  116.trivial.md  117.feature.md  118.trivial.md  119.docs.md  120.docs.md  121.fix.md  122.docs.md  123.feature.md  123.fix.md  124.improvement.md  125.feature.md  126.docs.md  127.improvement.md  128.feature.md  128.improvement.md  133.fix.md  134.docs.md  14.breaking.md  15.feature.md  154.fix.md  155.improvement.md  156.feature.md  16.docs.md  16.feature.md  160.improvement.md  161.trivial.md  165.breaking.md  166.improvement.md  170.fix.md  (+222 more)
docs/: changelog.md  cli.md  configuration.md  development.md  explanation.md  gen_config_stubs.py  gen_doc_stubs.py  getting_started.md  hackathon.md  index.md  installation.md  nutshell.md  packaging_confusion.md  roadmap.md
docs/background/: architecture.md  basic-concepts.md  datasets.md  explanation.md
docs/getting-started/: 01-configure.md  02-download-datasets.md  03-ingest.md  04-solve.md  05-visualise.md
docs/how-to-guides/: adding_custom_diagnostics.md  dataset-selection.py  docker_deployment.md  executors.md  hpc_executor.md  ingest-datasets.md  metric-dataset-selection.py  running-diagnostics-locally.py  running-metrics-locally.py
docs/introduction/: basic-concepts.md  getting_started.md  index.md  required_datasets.md
scripts/: HPCExecutor_config.template  changelog-to-release-template.py  create-registry.py  download-cartopy-data.py  example.sh  fetch-cmip6.py  fetch-esgf.py  fetch-ilamb-data.py  fetch-sample-data.py  fetch_test_data.py  hpc-executor-prefetch.sh  ingest-solve.sh  initialise-docker.sh  smoke-test.sh  test-install.py
stubs/celery/: __init__.pyi
stubs/ecgtools/: __init__.pyi  parsers.pyi
stubs/environs/: __init__.pyi
stubs/pooch/: __init__.pyi  hashes.pyi
tests/integration/: conftest.py  test_ar7_ft.py  test_celery.py  test_cmip7_aft.py  test_data.py  test_postgres.py  test_smoketest.py  test_solve.py
tests/test-data/: .gitignore  README.md
tests/test-data/cmec-output/: pr_v3-LR_0101_1x1_esmf_metrics_default_v20241023_cmec.json
tests/test-data/cmec_output/: pr_v3-LR_0101_1x1_esmf_metrics_default_v20241023_cmec.json
tests/test-data/regression/: .gitignore
tests/test-data/regression/esmvaltool/climate-at-global-warming-levels/cmip6_ssp126/: diagnostic.json  output.json
tests/test-data/regression/esmvaltool/climate-drivers-for-fire/cmip6_gn_r1i1p1f1_ACCESS-ESM1-5/: diagnostic.json  output.json
tests/test-data/regression/esmvaltool/cloud-radiative-effects/cmip6_gn_r1i1p1f1_ACCESS-ESM1-5/: diagnostic.json  output.json  recipe.yml  series.json
tests/test-data/regression/esmvaltool/cloud-scatterplots-cli-ta/cmip6_historical_mon_gn_r1i1p1f1_CESM2/: output.json  recipe.yml
tests/test-data/regression/esmvaltool/cloud-scatterplots-cli-ta/cmip6_historical_mon_gn_r1i1p1f1_MPI-ESM1-2-LR/: output.json
tests/test-data/regression/esmvaltool/cloud-scatterplots-clivi-lwcre/cmip6_historical_mon_gn_r1i1p1f1_CESM2/: output.json  recipe.yml
tests/test-data/regression/esmvaltool/cloud-scatterplots-clivi-lwcre/cmip6_historical_mon_gn_r1i1p1f1_MPI-ESM1-2-LR/: output.json  recipe.yml
tests/test-data/regression/esmvaltool/cloud-scatterplots-clt-swcre/cmip6_historical_mon_gn_r1i1p1f1_CESM2/: output.json  recipe.yml
tests/test-data/regression/esmvaltool/cloud-scatterplots-clt-swcre/cmip6_historical_mon_gn_r1i1p1f1_MPI-ESM1-2-LR/: output.json  recipe.yml
tests/test-data/regression/esmvaltool/cloud-scatterplots-clwvi-pr/cmip6_historical_mon_gn_r1i1p1f1_CESM2/: output.json  recipe.yml
tests/test-data/regression/esmvaltool/cloud-scatterplots-clwvi-pr/cmip6_historical_mon_gn_r1i1p1f1_MPI-ESM1-2-LR/: output.json  recipe.yml
tests/test-data/regression/esmvaltool/cloud-scatterplots-reference/obs4mips_obs4MIPs.obs4MIPs.ECMWF.ERA-5.mon.ta.25km.gn.v20250220/: output.json
tests/test-data/regression/esmvaltool/cloud-scatterplots-reference/obs4mips_obs4MIPs.obs4MIPs.ECMWF.ERA-5.ta.gn.v20250220/: output.json
tests/test-data/regression/esmvaltool/enso-basic-climatology/cmip6_gn_r1i1p1f1_ACCESS-ESM1-5/: output.json  recipe.yml  series.json
tests/test-data/regression/esmvaltool/enso-characteristics/cmip6_CMIP6.CMIP.CSIRO.ACCESS-ESM1-5.historical.r1i1p1f1.Omon.tos.gn.v20191115/: diagnostic.json  output.json
tests/test-data/regression/esmvaltool/enso-characteristics/cmip6_gn_r1i1p1f1_ACCESS-ESM1-5/: diagnostic.json  output.json
tests/test-data/regression/esmvaltool/equilibrium-climate-sensitivity/cmip6_gn_r1i1p1f1_ACCESS-ESM1-5/: diagnostic.json  output.json  series.json
tests/test-data/regression/esmvaltool/global-mean-timeseries/cmip6_1pctCO2_gn_r1i1p1f1_ACCESS-ESM1-5_Amon_tas/: output.json  recipe.yml  series.json
tests/test-data/regression/esmvaltool/global-mean-timeseries/cmip6_CMIP6.C4MIP CDRMIP.CSIRO.ACCESS-ESM1-5.esm-1pct-brch-1000PgC.r1i1p1f1.Amon.tas.gn.v20191206/: output.json  series.json
tests/test-data/regression/esmvaltool/regional-historical-trend/cmip6_gn_r1i1p1f1_ACCESS-ESM1-5__obs4mips_ERA-5/: diagnostic.json  output.json  recipe.yml
tests/test-data/regression/esmvaltool/sea-ice-area-basic/cmip6_CMIP6.CMIP.CCCma.CanESM5.historical.r1i1p1f1.SImon.siconc.gn.v20190429/: output.json  series.json
tests/test-data/regression/esmvaltool/sea-ice-area-basic/cmip6_gn_r1i1p1f1_ACCESS-ESM1-5/: diagnostic.json  (+3 more)
(+1724 files in other folders)
